--- a/100mb/index.html
+++ b/100mb/index.html
@@ -7,6 +7,6 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="http://mtn-play.site.byorbit.com">click here</a>.</p>
+    <p>If you are not redirected, <a href="http://onlinecms.mtn.co.za">click here</a>.</p>
 </body>
 </html>
