--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://your-redirected-host.com">
+    <meta http-equiv="refresh" content="0; url=http://momapi.dev.digital.oldmutual.co.za">
     <title>Redirecting...</title>
 </head>
 <body>
