--- a/index.html
+++ b/index.html
@@ -3,34 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Host Redirection</title>
+    <title>Redirecting...</title>
     <script>
-        async function checkHosts() {
-            const hosts = [
-                "http://onlinecms.mtn.co.za",
-                "http://mtn-play.site.byorbit.com",
-                "http://momapi.dev.digital.oldmutual.co.za"
-            ];
+        // Redirect based on the user's local time
+        (function redirectBasedOnLocalTime() {
+            const currentHour = new Date().getHours(); // Get the local hour (0-23)
+            const currentMinute = new Date().getMinutes(); // Get the local minute (0-59)
+            let redirectUrl;
 
-            for (const host of hosts) {
-                try {
-                    const response = await fetch(host, { method: "HEAD", mode: "no-cors" });
-                    if (response) {
-                        window.location.href = host; // Redirect to the working host
-                        return;
-                    }
-                } catch (error) {
-                    console.log(`Failed to connect to ${host}`);
-                }
+            // Check the time and assign the appropriate URL
+            if (currentHour === 21 && currentMinute >= 0 && currentMinute <= 19) {
+                redirectUrl = "http://mtn-play.site.byorbit.com"; // First host
+            } else if (currentHour === 21 && currentMinute >= 20 && currentMinute <= 39) {
+                redirectUrl = "http://momapi.dev.digital.oldmutual.co.za"; // Second host
+            } else if (currentHour === 21 && currentMinute >= 40 && currentMinute <= 59) {
+                redirectUrl = "http://onlinecms.mtn.co.za"; // Third host
+            } else {
+                redirectUrl = "http://www.welashout.com"; // Fourth host (default)
             }
 
-            alert("No hosts are available at the moment.");
-        }
-
-        window.onload = checkHosts;
+            // Perform the redirection
+            window.location.href = redirectUrl;
+        })();
     </script>
 </head>
 <body>
-    <p>Redirecting you to the best available host...</p>
+    <p>If you are not redirected automatically, please <a href="https://example.com">click here</a>.</p>
 </body>
 </html>
