--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <body class="bg-gray-100 font-sans">
   <header class="bg-blue-800 text-white p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">DTECH App Store</h1>
-      <p class="text-sm">Empowering the Youth Through Digital Innovation</p>
+      <div class="flex items-center space-x-4">
+        <img src="icons/dtech-logo.png" alt="DTECH Logo" class="h-10 w-10 rounded bg-white p-1">
+        <div>
+          <h1 class="text-2xl font-bold">DTECH App Store</h1>
+          <p class="text-sm">Empowering the Youth Through Digital Innovation</p>
+        </div>
+      </div>
     </div>
   </header>  <main class="container mx-auto p-6">
     <!-- Categories -->
@@ -40,4 +45,7 @@
 </section>
 
   </main>  <footer class="bg-blue-800 text-white p-4 text-center mt-10">
-    <p class="text-sm">Powered by
+    <p class="text-sm">Powered by Preasx24 | DTECH 2025</p>
+  </footer>
+</body>
+</html>
