--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header class="bg-blue-800 text-white p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
       <div class="flex items-center space-x-4">
-        <img src="icons/dtech-logo.png" alt="DTECH Logo" class="h-10 w-10 rounded bg-white p-1">
+        <img src="logo.png" alt="DTECH Logo" class="h-10 w-10 rounded bg-white p-1">
         <div>
           <h1 class="text-2xl font-bold">DTECH App Store</h1>
           <p class="text-sm">Empowering the Youth Through Digital Innovation</p>
