--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,35 +22,40 @@
         </div>
       </div>
     </div>
-  </header>  <main class="container mx-auto p-6">
+  </header>
+
+  <main class="container mx-auto p-6">
     <!-- Categories -->
     <section class="mb-6">
       <h2 class="text-2xl font-semibold mb-4 text-blue-800">Categories</h2>
       <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-        <button class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 transition">D-TECH Apps</button>
-        <button class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 transition">Games</button>
-        <button class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 transition">General</button>
-        <button class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 transition">Design</button>
-        <button class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 transition">Others</button>
+        <a href="dtech-apps.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">D-TECH Apps</a>
+        <a href="games.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">Games</a>
+        <a href="general.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">General</a>
+        <a href="design.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">Design</a>
+        <a href="others.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">Others</a>
       </div>
-    </section><!-- App Listings -->
-<section>
-  <h2 class="text-2xl font-semibold mb-6 text-blue-800">Featured Apps</h2>
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-    <!-- Example App Card -->
-    <div class="bg-white border border-gray-200 shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition">
-      <img src="icons/dtech-icon.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
-      <div class="p-4">
-        <h3 class="text-lg font-bold text-blue-800">DTECH Calculator</h3>
-        <p class="text-sm text-gray-600 mb-3">Helps students calculate APS scores and find qualifying courses.</p>
-        <a href="apps/dtech-calculator.apk" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">Download APK</a>
-      </div>
-    </div>
-    <!-- More app cards will go here -->
-  </div>
-</section>
+    </section>
 
-  </main>  <footer class="bg-blue-900 text-white p-4 text-center mt-10 shadow-inner">
+    <!-- App Listings -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-6 text-blue-800">Featured Apps</h2>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+        <!-- Example App Card -->
+        <div class="bg-white border border-gray-200 shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="icons/dtech-icon.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
+          <div class="p-4">
+            <h3 class="text-lg font-bold text-blue-800">DTECH Calculator</h3>
+            <p class="text-sm text-gray-600 mb-3">Helps students calculate APS scores and find qualifying courses.</p>
+            <a href="apps/dtech-calculator.apk" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">Download APK</a>
+          </div>
+        </div>
+        <!-- More app cards will go here -->
+      </div>
+    </section>
+  </main>
+
+  <footer class="bg-blue-900 text-white p-4 text-center mt-10 shadow-inner">
     <p class="text-sm">Powered by Preasx24 | DTECH 2025</p>
   </footer>
 </body>
