--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
   </style>
 </head>
 <body class="font-sans">
+
+  <!-- Support Button (absolute top-right) -->
+  <a href="https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365" target="_blank"
+     class="fixed top-0 right-0 m-2 text-sm bg-white text-blue-900 px-3 py-1 rounded-full shadow hover:bg-blue-100 transition z-50">
+    Support
+  </a>
+
   <header class="bg-gradient-to-r from-blue-900 to-blue-700 text-white p-4 shadow-lg">
-    <div class="container mx-auto flex justify-between items-center relative">
-      <!-- Support Button -->
-      <a href="https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365" target="_blank" class="absolute right-0 top-0 mt-2 mr-2 text-sm bg-white text-blue-900 px-3 py-1 rounded-full shadow hover:bg-blue-100 transition">
-        Support
-      </a>
-      <div class="flex items-center space-x-4">
-        <img src="icons/dtech-logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-2 border-blue-200 shadow-md">
-        <div>
-          <h1 class="text-3xl font-extrabold tracking-wide">DTECH App Store</h1>
-          <p class="text-sm italic text-blue-100">Empowering the Youth Through Digital Innovation</p>
-        </div>
+    <div class="container mx-auto flex items-center space-x-4">
+      <img src="icons/dtech-logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-2 border-blue-200 shadow-md">
+      <div>
+        <h1 class="text-3xl font-extrabold tracking-wide">DTECH App Store</h1>
+        <p class="text-sm italic text-blue-100">Empowering the Youth Through Digital Innovation</p>
       </div>
     </div>
   </header>
@@ -33,11 +34,11 @@
     <section class="mb-6">
       <h2 class="text-2xl font-semibold mb-4 text-blue-800">Categories</h2>
       <div class="grid grid-cols-2 md:grid-cols-6 gap-4">
-        <a href="dtech-apps.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">D-TECH Apps</a>
-        <a href="games.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">Games</a>
-        <a href="general.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">General</a>
-        <a href="design.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">Design</a>
-        <a href="others.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">Others</a>
+        <a href="dtech-apps.html" class="bg-gradient-to-tr from-blue-50 to-blue-100 shadow-md rounded-lg p-4 hover:from-blue-100 hover:to-blue-200 border border-blue-300 font-medium text-blue-900 text-center transition block">D-TECH Apps</a>
+        <a href="games.html" class="bg-gradient-to-tr from-blue-50 to-blue-100 shadow-md rounded-lg p-4 hover:from-blue-100 hover:to-blue-200 border border-blue-300 font-medium text-blue-900 text-center transition block">Games</a>
+        <a href="general.html" class="bg-gradient-to-tr from-blue-50 to-blue-100 shadow-md rounded-lg p-4 hover:from-blue-100 hover:to-blue-200 border border-blue-300 font-medium text-blue-900 text-center transition block">General</a>
+        <a href="design.html" class="bg-gradient-to-tr from-blue-50 to-blue-100 shadow-md rounded-lg p-4 hover:from-blue-100 hover:to-blue-200 border border-blue-300 font-medium text-blue-900 text-center transition block">Design</a>
+        <a href="others.html" class="bg-gradient-to-tr from-blue-50 to-blue-100 shadow-md rounded-lg p-4 hover:from-blue-100 hover:to-blue-200 border border-blue-300 font-medium text-blue-900 text-center transition block">Others</a>
         <a href="services.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">SERVICE</a>
       </div>
     </section>
@@ -63,5 +64,6 @@
   <footer class="bg-blue-900 text-white p-4 text-center mt-10 shadow-inner">
     <p class="text-sm">Powered by Preasx24 | DTECH 2025</p>
   </footer>
+
 </body>
 </html>
