--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="font-sans">
 
-  <!-- Support Button (absolute top-right) -->
+  <!-- Support Button -->
   <a href="https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365" target="_blank"
      class="fixed top-0 right-0 m-2 text-sm bg-white text-blue-900 px-3 py-1 rounded-full shadow hover:bg-blue-100 transition z-50">
     Support
@@ -34,12 +34,15 @@
     <section class="mb-6">
       <h2 class="text-2xl font-semibold mb-4 text-blue-800">Categories</h2>
       <div class="grid grid-cols-2 md:grid-cols-6 gap-4">
-        <a href="dtech-apps.html" class="bg-gradient-to-tr from-blue-50 to-blue-100 shadow-md rounded-lg p-4 hover:from-blue-100 hover:to-blue-200 border border-blue-300 font-medium text-blue-900 text-center transition block">D-TECH Apps</a>
-        <a href="games.html" class="bg-gradient-to-tr from-blue-50 to-blue-100 shadow-md rounded-lg p-4 hover:from-blue-100 hover:to-blue-200 border border-blue-300 font-medium text-blue-900 text-center transition block">Games</a>
-        <a href="general.html" class="bg-gradient-to-tr from-blue-50 to-blue-100 shadow-md rounded-lg p-4 hover:from-blue-100 hover:to-blue-200 border border-blue-300 font-medium text-blue-900 text-center transition block">General</a>
-        <a href="design.html" class="bg-gradient-to-tr from-blue-50 to-blue-100 shadow-md rounded-lg p-4 hover:from-blue-100 hover:to-blue-200 border border-blue-300 font-medium text-blue-900 text-center transition block">Design</a>
-        <a href="others.html" class="bg-gradient-to-tr from-blue-50 to-blue-100 shadow-md rounded-lg p-4 hover:from-blue-100 hover:to-blue-200 border border-blue-300 font-medium text-blue-900 text-center transition block">Others</a>
-        <a href="services.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">SERVICE</a>
+        <!-- Cool gradient buttons for all except Service -->
+        <a href="dtech-apps.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">D-TECH Apps</a>
+        <a href="games.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">Games</a>
+        <a href="general.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">General</a>
+        <a href="design.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">Design</a>
+        <a href="others.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">Others</a>
+
+        <!-- SERVICE button with the simple clean style -->
+        <a href="services.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">SERVICE</a>
       </div>
     </section>
 
@@ -56,7 +59,6 @@
             <a href="apps/dtech-calculator.apk" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">Download APK</a>
           </div>
         </div>
-        <!-- More app cards will go here -->
       </div>
     </section>
   </main>
