--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <header class="bg-gradient-to-r from-blue-900 to-blue-700 text-white p-4 shadow-lg">
     <div class="container mx-auto flex items-center space-x-4">
-      <img src="icons/dtech-logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-2 border-blue-200 shadow-md">
+      <img src="logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-2 border-blue-200 shadow-md">
       <div>
         <h1 class="text-3xl font-extrabold tracking-wide">DTECH App Store</h1>
         <p class="text-sm italic text-blue-100">Empowering the Youth Through Digital Innovation</p>
@@ -52,7 +52,7 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         <!-- Example App Card -->
         <div class="bg-white border border-gray-200 shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="icons/dtech-icon.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
+          <img src="icon.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
           <div class="p-4">
             <h3 class="text-lg font-bold text-blue-800">DTECH Calculator</h3>
             <p class="text-sm text-gray-600 mb-3">Helps students calculate APS scores and find qualifying courses.</p>
