--- a/dtech-apps.html
+++ b/dtech-apps.html
@@ -40,7 +40,7 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
       <!-- App 1 -->
       <div class="bg-white border border-gray-200 shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition">
-        <img src="icons/dtech-icon.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
+        <img src="logo.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
         <div class="p-4">
           <h3 class="text-lg font-bold text-blue-800">DTECH Calculator</h3>
           <p class="text-sm text-gray-600 mb-3">Helps students calculate APS scores and explore suitable university courses.</p>
