--- a/dtech-apps.html
+++ b/dtech-apps.html
@@ -44,7 +44,7 @@
         <div class="p-4">
           <h3 class="text-lg font-bold text-blue-800">DTECH Calculator</h3>
           <p class="text-sm text-gray-600 mb-3">Helps students calculate APS scores and explore suitable university courses.</p>
-          <a href="apps/dtech-calculator.apk" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">Download APK</a>
+          <a href="D-TECH SERVICES.apk" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">Download APK</a>
         </div>
       </div>
 
