--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="games.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">Games</a>
         <a href="general.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">General</a>
         <a href="design.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">Design</a>
-        <a href="others.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">Others</a>
+        <a href="tech.html" class="bg-gradient-to-r from-purple-600 to-red-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">Others</a>
 
         <!-- SERVICE button with the simple clean style -->
         <a href="services.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">SERVICE</a>
