--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       <div class="grid grid-cols-2 md:grid-cols-6 gap-4">
         <!-- Cool gradient buttons for all except Service -->
         <a href="dtech-apps.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">D-TECH Apps</a>
-        <a href="games.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">Games</a>
-        <a href="general.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">General</a>
-        <a href="design.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">Design</a>
-        <a href="tech.html" class="bg-gradient-to-r from-purple-600 to-red-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">Others</a>
+        <a href="GAMES.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">GAMES</a>
+        <a href="GENERAL.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">GENERAL</a>
+        <a href="DESIGN.html" class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">DESIGN</a>
+        <a href="tech.html" class="bg-gradient-to-r from-blue-600 to-red-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white">TECH</a>
 
         <!-- SERVICE button with the simple clean style -->
         <a href="services.html" class="bg-white shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-blue-800 text-center transition block">SERVICE</a>
