--- a/dtech-apps.html
+++ b/dtech-apps.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DTECH Apps</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
@@ -13,66 +13,65 @@
 </head>
 <body class="font-sans">
 
-  <!-- Support Button -->
-  <a href="https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365" target="_blank"
-     class="fixed top-0 right-0 m-2 text-sm bg-white text-blue-900 px-3 py-1 rounded-full shadow hover:bg-blue-100 transition z-50">
-    Support
-  </a>
-
-  <!-- Header -->
   <header class="bg-gradient-to-r from-blue-900 to-blue-700 text-white p-4 shadow-lg">
-    <div class="container mx-auto flex items-center space-x-4">
-      <img src="icons/dtech-logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-2 border-blue-200 shadow-md">
-      <div>
-        <h1 class="text-3xl font-extrabold tracking-wide">D-TECH Apps</h1>
-        <p class="text-sm italic text-blue-100">Explore Our Exclusive Digital Tools</p>
+    <div class="container mx-auto flex justify-between items-center">
+      <div class="flex items-center space-x-4">
+        <img src="logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-2 border-blue-200 shadow-md">
+        <div>
+          <h1 class="text-3xl font-extrabold tracking-wide">DTECH App Store</h1>
+          <p class="text-sm italic text-blue-100">Empowering the Youth Through Digital Innovation</p>
+        </div>
       </div>
     </div>
   </header>
 
-  <!-- Back Button -->
-  <div class="container mx-auto mt-4 mb-6">
-    <a href="index.html" class="inline-block text-blue-800 hover:underline text-sm">&larr; Back to App Store</a>
-  </div>
-
-  <!-- App Listings -->
-  <main class="container mx-auto px-4">
+  <main class="container mx-auto p-6">
+    <h2 class="text-2xl font-semibold mb-6 text-blue-800">D-TECH Apps</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
       <!-- App 1 -->
       <div class="bg-white border border-gray-200 shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition">
-        <img src="logo.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
+        <img src="icon.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
         <div class="p-4">
           <h3 class="text-lg font-bold text-blue-800">DTECH Calculator</h3>
-          <p class="text-sm text-gray-600 mb-3">Helps students calculate APS scores and explore suitable university courses.</p>
-          <a href="D-TECH SERVICES.apk" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">Download APK</a>
+          <p class="text-sm text-gray-600 mb-3">Helps students calculate APS scores and find qualifying courses.</p>
+          <a href="D-TECH SERVICES.apk"
+             onclick="window.open('https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365', '_blank')"
+             class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+             Download APK
+          </a>
         </div>
       </div>
 
-      <!-- App 2 Example -->
+      <!-- App 2 -->
       <div class="bg-white border border-gray-200 shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition">
-        <img src="icons/app-placeholder.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
+        <img src="icons/dtech-icon.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
         <div class="p-4">
-          <h3 class="text-lg font-bold text-blue-800">Student Budget Manager</h3>
-          <p class="text-sm text-gray-600 mb-3">A smart tool to help students manage their monthly budget and savings.</p>
-          <a href="#" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">Download APK</a>
+          <h3 class="text-lg font-bold text-blue-800">DTECH Notes Viewer</h3>
+          <p class="text-sm text-gray-600 mb-3">View and download study notes across subjects and levels.</p>
+          <a href="apps/dtech-notes.apk"
+             onclick="window.open('https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365', '_blank')"
+             class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+             Download APK
+          </a>
         </div>
       </div>
 
-      <!-- App 3 Example -->
+      <!-- App 3 -->
       <div class="bg-white border border-gray-200 shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition">
-        <img src="icons/app-placeholder.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
+        <img src="icons/dtech-icon.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-50 border-b border-blue-100">
         <div class="p-4">
-          <h3 class="text-lg font-bold text-blue-800">Notes Organizer</h3>
-          <p class="text-sm text-gray-600 mb-3">Organize your study notes by subject, tag, and exam date.</p>
-          <a href="#" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">Download APK</a>
+          <h3 class="text-lg font-bold text-blue-800">DTECH Campus Connect</h3>
+          <p class="text-sm text-gray-600 mb-3">Connect with other students, sell, rent or buy items easily.</p>
+          <a href="apps/dtech-connect.apk"
+             onclick="window.open('https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365', '_blank')"
+             class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+             Download APK
+          </a>
         </div>
       </div>
-
-      <!-- Add more apps as needed -->
     </div>
   </main>
 
-  <!-- Footer -->
   <footer class="bg-blue-900 text-white p-4 text-center mt-10 shadow-inner">
     <p class="text-sm">Powered by Preasx24 | DTECH 2025</p>
   </footer>
