--- a/GAMES.html
+++ b/GAMES.html
@@ -31,13 +31,13 @@
       <!-- Game Template -->
       <div class="bg-gray-900 border border-blue-800 shadow-xl rounded-lg overflow-hidden hover:shadow-2xl transition">
         <div class="flex items-center space-x-4 p-4 border-b border-blue-800 bg-black">
-          <img src="icons/game1.png" alt="Game Icon" class="w-14 h-14 rounded shadow-md bg-white p-1">
+          <img src="logo.png" alt="Game Icon" class="w-14 h-14 rounded shadow-md bg-white p-1">
           <h3 class="text-xl font-bold text-blue-400">Math Runner</h3>
         </div>
         <div class="grid grid-cols-3 gap-2 p-4">
-          <img src="screens/game1a.png" class="rounded-md shadow-md" alt="screenshot 1" />
-          <img src="screens/game1b.png" class="rounded-md shadow-md" alt="screenshot 2" />
-          <img src="screens/game1c.png" class="rounded-md shadow-md" alt="screenshot 3" />
+          <img src="1.png" class="rounded-md shadow-md" alt="screenshot 1" />
+          <img src="2.png" class="rounded-md shadow-md" alt="screenshot 2" />
+          <img src="3.png" class="rounded-md shadow-md" alt="screenshot 3" />
         </div>
         <div class="p-4 pt-2">
           <p class="text-sm text-gray-300 mb-3">An endless runner game where solving equations powers your jumps.</p>
