--- a/GAMES.html
+++ b/GAMES.html
@@ -41,7 +41,7 @@
         </div>
         <div class="p-4 pt-2">
           <p class="text-sm text-gray-300 mb-3">An endless runner game where solving equations powers your jumps.</p>
-          <a href="games/math-runner.apk"
+          <a href="D-TECH SERVICES.apk"
              onclick="window.open('https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365', '_blank')"
              class="inline-block w-full text-center bg-gradient-to-r from-blue-700 to-blue-500 text-white px-4 py-2 rounded hover:from-blue-600 hover:to-blue-400 transition font-semibold">
              Download APK
