--- a/GAMES.html
+++ b/GAMES.html
@@ -16,7 +16,7 @@
   <header class="bg-gradient-to-r from-blue-900 to-black text-white p-4 shadow-lg">
     <div class="container mx-auto flex justify-between items-center">
       <div class="flex items-center space-x-4">
-        <img src="icons/dtech-logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-2 border-blue-200 shadow-md">
+        <img src="logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-2 border-blue-200 shadow-md">
         <div>
           <h1 class="text-3xl font-extrabold tracking-wide">DTECH App Store</h1>
           <p class="text-sm italic text-blue-200">Empowering the Youth Through Digital Innovation</p>
